@@ -4,6 +4,7 @@
 
 === 1.0.7 ===
 * UI Crossfade marker is now editable with mouse.
+* Added Dry/Wet balance knob.
 * Updated build scripts and dependencies.
 
 === 1.0.6 ===
